--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "minecraft-web-proxy",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^23.0.0"
+    "multer": "^1.4.5",
+    "ws": "^8.13.0"
   }
 }
