--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minecraft-web-proxy",
+  "name": "minecraft-capture-server",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
@@ -7,8 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "ws": "^8.13.0"
+    "express": "^4.19.0",
+    "multer": "^1.4.4"
   }
 }
